📝 move to client component & show how to override pdfjs-dist

--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@rollup/rollup-darwin-x64": "^4.19.1",
     "@vue-pdf-viewer/viewer": "latest",
     "nuxt": "^3.12.3",
+    "pdfjs-dist": "4.4.168",
+    "typescript": "^5.5.4",
     "vue": "latest"
+  },
+  "pnpm": {
+    "overrides": {
+      "pdfjs-dist": "4.4.168"
+    }
   }
 }
